# tree-sitter-CategorialGrammar

iconic/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
iconic/bindings/c/: tree-sitter-CategorialGrammarIconic.h  tree-sitter-CategorialGrammarIconic.pc.in
iconic/bindings/go/: binding.go  binding_test.go  go.mod
iconic/bindings/node/: binding.cc
iconic/bindings/python/tree_sitter_categorial_grammar_iconic/: __init__.py  binding.c
iconic/bindings/rust/: lib.rs
iconic/src/: grammar.json  node-types.json  parser.c
iconic/test/corpus/: basic.txt
